2009-08-23  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): increase tolerance for qawc(f459) elist test

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* workspace.c (gsl_integration_workspace_free): handle NULL
	argument in free

	* qmomof.c (gsl_integration_qawo_table_free): handle NULL argument
	in free

	* qmomo.c (gsl_integration_qaws_table_free): handle NULL argument
	in free

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2003-01-12  Brian Gough  <brian.gough@network-theory.co.uk>

	* qawc.c (gsl_integration_qawc): fixed bisection condition to
	prevent singularity falling on interval boundary

Mon Apr 29 20:05:56 2002  Brian Gough  <bjg@network-theory.co.uk>

	* qcheb.c (gsl_integration_qcheb): avoid loss of precision by
 	replacing endpoints center+half_length by b and center-half_length
 	by a

Mon Jul 30 17:46:42 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): reduced tolerance on qagiu(f455) smooth elist
 	test slightly

Mon Jul  2 15:42:41 2001  Brian Gough  <bjg@network-theory.co.uk>

	* util.c: split out some static functions into separate files

Tue Apr 17 22:11:28 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qc25f.c (qc25f): need GSL_ERROR_VOID because function does not
 	return value

Mon Apr 16 20:09:09 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qc25f.c (qc25f): removed unnecessary variables, replaced use of
 	abort by GSL_ERROR

	* qmomof.c (gsl_integration_qawo_table_set_length): removed
 	unnecessary duplicate variable declaration for i

Mon Jan 22 12:35:05 2001  Brian Gough  <bjg@network-theory.co.uk>

	* qmomof.c: moments are now precomputed in a read-only table
 	instead of being computed on the fly (cached)

Fri Dec  8 19:45:52 2000  Brian Gough  <bjg@network-theory.co.uk>

	* reorganized, made internal functions static

Thu Nov 16 19:45:19 2000  Brian Gough  <bjg@network-theory.co.uk>
