@@ -1,3 +1,7 @@
+2010-03-09  Brian Gough  <bjg@network-theory.co.uk>
+
+	* glfixed.c (gauss_legendre_tbl): made this function static
+
 2009-08-23  Brian Gough  <bjg@network-theory.co.uk>
 
 	* test.c (main): increase tolerance for qawc(f459) elist test
